--- a/vcweb/forestry/templates/forestry/practice.html
+++ b/vcweb/forestry/templates/forestry/practice.html
@@ -3,7 +3,8 @@
 {% block title %} Forestry Practice Round{% endblock %}
 
 {% block content %}
-<h3>Forestry</h3>
+<h3>Forestry Practice Round</h3>
 <p>
+This is a <b>practice round</b>.  Your decisions in this round will not affect your total earnings.
 </p>
 {% endblock content %}
