setting up experimenter / participant nav links and url -> view -> template flow
--HG--
rename : vcweb/forestry/templates/forestry/experimenter.html => vcweb/forestry/templates/forestry/experimenter-index.html
rename : vcweb/forestry/templates/forestry/index.html => vcweb/forestry/templates/forestry/participant-index.html

--- a/vcweb/forestry/templates/forestry/instructions.html
+++ b/vcweb/forestry/templates/forestry/instructions.html
@@ -3,7 +3,7 @@
 {% block title %} Forestry Instructions{% endblock %}
 
 {% block content %}
-<h3>Forestry Instructions</h3>
+<h3>Forestry</h3>
 <p>
 Welcome.  Thank you for participating in this experiment. The following
 exercise is a way to actively participate in a project about individual
