--- a/vcweb/forestry/templates/forestry/participant-index.html
+++ b/vcweb/forestry/templates/forestry/participant-index.html
@@ -11,20 +11,26 @@
     <h2 class='title'>Forestry Experiment</h2>
     <div class='entry'>
         Welcome back, {{ user.participant }}.
+        <br/>
+        <br/>
 
         <fieldset>
             <legend>Active experiments</legend>
+            {% if user.participant.active_experiments %}
             <ul>
-                {% for experiment in user.participant.active_experiments %}
-                <li> <a href='{{ experiment.participant_url }}'>{{ experiment }}</a></li>
+                {% for experiment_relationship in user.participant.active_experiments %}
+                <li> <a href='{{ experiment_relationship.experiment.participant_url }}'>{{ experiment_relationship.experiment }}</a></li>
                 {% endfor %}
             </ul>
+            {% else %}
+                <div class='info'>No active experiments.</div>
+            {% endif %}
         </fieldset>
         <fieldset>
             <legend>Other experiments</legend>
             <ul>
-                {% for experiment in user.participant.inactive_experiments %}
-                <li> <a href='{{ experiment.participant_url }}'>{{ experiment }}</a></li>
+                {% for experiment_relationship in user.participant.inactive_experiments %}
+                <li> <a href='{{ experiment_relationship.experiment.participant_url }}'>{{ experiment_relationship.experiment }}</a></li>
                 {% endfor %}
             </ul>
         </fieldset>
