--- a/vcweb/forestry/templates/forestry/participant-index.html
+++ b/vcweb/forestry/templates/forestry/participant-index.html
@@ -16,31 +16,35 @@
 
         <fieldset>
             <legend>Active experiments</legend>
+            {% if user.participant.active_experiments %}
             <div class='info'>
-                {% if user.participant.active_experiments %}
                 <ul>
                     {% for experiment_relationship in user.participant.active_experiments %}
                     <li> <a href='{{ experiment_relationship.experiment.participant_url }}'>{{ experiment_relationship.experiment }}</a></li>
                     {% endfor %}
                 </ul>
-                {% else %}
-                No active experiments.
-                {% endif %}
             </div>
+            {% else %}
+            <div class='alert'>
+                No active experiments.
+            </div>
+            {% endif %}
         </fieldset>
         <fieldset>
             <legend>Other experiments</legend>
+            {% if user.participant.inactive_experiments %}
             <div class='info'>
-                {% if user.participant.inactive_experiments %}
                 <ul>
                     {% for experiment_relationship in user.participant.inactive_experiments %}
                     <li> <a href='{{ experiment_relationship.experiment.participant_url }}'>{{ experiment_relationship.experiment }}</a></li>
                     {% endfor %}
                 </ul>
-                {% else %}
-                No other experiments.
-                {% endif %}
             </div>
+            {% else %}
+            <div class='alert'>
+                No other experiments.
+            </div>
+            {% endif %}
         </fieldset>
     </div>
 </div>
