adding experimenter and participant decorators to restrict view access to the appropriate role

--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -2,12 +2,11 @@
 
 {% block title %} Virtual Commons Web Experimenter Interface {% endblock %} 
 
+{% block header %}
+{% include "includes/experimenter-nav-menu.inc" %}
+{% endblock %}
+
 {% block content %}
-<div id="post">
-<p>
-This is the base for the experimenter interface.
-</p>
-</div>
 
 {% endblock content %}
 
