--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -30,13 +30,11 @@
 {% endblock %}
 
 {% block content %}
-<h3>Chat Test</h3>
-<div id="chat" style="width: 60em; height: 20em; overflow:auto; border: 1px dashed black">
+<div class='chat'>
 </div>
-<form id="chatform">
-<input id='chattext' type="text" />
-<input type="submit" />
-</form>
+<div class='experiment'>
+{{ experiment }} actions: start round | next round | stop round
+</div>
 {% endblock %}
 
 
