--- a/vcweb/core/templates/experimenter-index.html
+++ b/vcweb/core/templates/experimenter-index.html
@@ -24,7 +24,7 @@ Welcome to the experimenter interface.  You are logged in as {{request.user.expe
 <ul>
 {% for e in experiments %}
 <li>
-<a href='{{e.management_url}}'>{{ e }}</a>
+    <a href='{{e.management_url}}'>{{ e }} {{e.status_line}}</a>
 </li>
 {% endfor %}
 </ul>
