--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -14,6 +14,11 @@
 	</div>
 	<br/>
 	<h2 class='title'>Current development</h2>
+    <div class='warning'>
+        This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website is likely to be destroyed.</b>
+        Once we have a public beta we will ensure that your data is maintained
+        and migrated.
+    </div>
 	<div class='entry'>
 	Development is currently focused on converting the 
 	<a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a> 
