removing half-written code... ugh

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<br/>
 	<h2 class='title'>Current development</h2>
-    <div class='warning'>
+    <div class='alert'>
         This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website is likely to be destroyed.</b>
         Once we have a public beta we will ensure that your data is maintained
         and migrated.
