--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -1,40 +1,48 @@
-{% extends "base-vcweb.html" %}
+{% extends "base-experimenter.html" %}
 
-{% block head %}
-{{ block.super }}
-{% include "includes/experimenter.events.inc" %}
-{% include "includes/socket.io.inc" %}
-<script type="text/javascript">
-    $(function() {
-        var s = connect("{{ socket_io_host }}", 8888);
-        s.on('message', function(data) {
-            $("#chat").append("<div>" + data + "</div>");
-        });
+{% block title %} VCWEB Experiment Monitoring {% endblock %}
 
-        //send the message when submit is clicked
-        $('#chatform').submit(function (evt) {
-            var line = $('#chattext').val()
-            $('#chattext').val('')
-            console.log("sending line: " + line);
-            s.send(createMessageEvent(line));
-            return false;
-        });
-        $('#chattext').focus();
-    });
-</script>
-{% endblock %}
+{% block page %}
+
+<fieldset>
+    <legend>{{experiment}} (id: {{ experiment.pk }})</legend>
+        <li>Status: <span id='experiment-status'>{{ experiment.status }}</span></li>
+        <li><span class='highlight' id='experiment-round'> {{ experiment.current_round }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b></li>
+    </ul>
+    <div class='info'>
+        <a href='allocate-groups'>allocate groups</a> | 
+        <a href='#'>view data</a> |
+        <a href='#'>download data</a>
+    </div>
+    {% if experiment.groups.count > 0 %}
+    {% for group in experiment.groups.all %}
+    <h3> {{ group }} </h3>
+    <div class='participants'>
+        <table>
+            <thead>
+                <th>Participant</th><th>Round</th><th>Parameter</th><th>Value</th>
+            </thead>
+            <tbody>
+                {% for participant in group.participants.all %}
+
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div class='data'>
+        Group round data:
+        <ul>
+            {% for data_value in group.current_round_data_values.all %}
+            <li> {{ data_value }} </li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endfor %}
+    {% else %}
+    <div class='info'>Groups have not been allocated yet.</div>
+    {% endif %}
+</fieldset>
+</p>
 
 
-{% block header %}
-{% include "includes/experimenter-nav-menu.inc" %}
-{% endblock %}
-
-{% block content %}
-<div class='chat'>
-</div>
-<div class='experiment'>
-{{ experiment }} actions: start round | next round | stop round
-</div>
-{% endblock %}
-
-
+{% endblock page %}
