updates to experiment monitor interface and setting up practice rounds for forestry

--- a/vcweb/forestry/templates/forestry/instructions.html
+++ b/vcweb/forestry/templates/forestry/instructions.html
@@ -19,7 +19,7 @@ decision about how many resource units you want to harvest.  At the start you
 can harvest a maximum of 5 units and a minimum of 0 units from the resource.
 </p>
 <p>
-We will first start with a practice round.
+We will first start with two practice rounds.
 </p>
 
 <form action="next-round" method="post">
