--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -6,15 +6,34 @@
 
 <fieldset>
     <legend>{{experiment}} (id: {{ experiment.pk }})</legend>
-    <ul>
-        <li>Status: <span id='experiment-status'>{{ experiment.status }}</span></li>
-        <li><span class='highlight' id='experiment-round'> {{ experiment.current_round }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b></li>
-    </ul>
-    <div class='info'>
-        <a href='allocate-groups'>allocate groups</a> | 
-        <a href='#'>view data</a> |
-        <a href='#'>download data</a>
+    <div class='experiment-dashboard'>
+        {% comment %}
+        FIXME: Improve this so that we can just inject a new round_configuration
+        JSON object in and everything auto-updates.
+        {% endcomment %}
+        
+        <fieldset class='small'>
+            <legend>Round Status</legend>
+            <div class='status'>
+                Round status: <span id='experiment-status'>{{ experiment.status }}</span> 
+                {% if not experiment.is_active %}
+                <a href='activate'>(activate)</a>
+                {% endif %}
+            </div>
+            <div>
+                Round <span id='experiment-round'> {{ experiment.current_round.sequence_number }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b>
+                (<a href='next-round'>next round</a>
+                | <a href='stop-round'>stop round</a>)
+            </div>
+            <div>
+                Round type: <span id='round-type'>{{ experiment.current_round.round_type }}</span>
+            </div>
+            <div>
+                <label>Time remaining:</label><span class='highlight' id='time-left'>{{ experiment.time_remaining }} </span>s
+            </div>
+        </fieldset>
     </div>
+
     {% if experiment.round_data.count > 0 %}
     {% for round_data in experiment.round_data.all %}
     <h3> {{ round_data }} </h3>
