--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -6,7 +6,16 @@
 {% include "includes/experimenter-nav-menu.inc" %}
 {% endblock %}
 
-{% block content %}
-
-{% endblock content %}
+{% block page %}
+{% if messages %}
+<div class='alert alertIcon'>
+    We encountered some problems with your request:
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+</div>
+{% endif %}
+{% endblock page %}
 
