--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -5,27 +5,29 @@
 
 {% block page%}
 <div id='post'>
-	<h2 class='title'>Welcome</h2>
-	<div class='entry'>
-	Welcome to the Virtual Commons Web Environment, an open software initiative hosted at 
-	<a class='external' href='http://www.asu.edu'>Arizona State University</a>.    
-	We develop and support a variety of web-based collective action experiments.  
-	For more information, please visit <a class='external' href='http://commons.asu.edu'>http://commons.asu.edu</a>.
-	</div>
-	<br/>
-	<h2 class='title'>Current development</h2>
-    <div class='alert'>
-        This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website will
-        not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
+    <h2 class='title'>Welcome</h2>
+    <div class='entry'>
+        Welcome to the Virtual Commons Web Environment, an open software initiative hosted at
+        <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
+        We develop and support a variety of web-based collective action experiments.
+        For more information, please visit <a class='external' href='http://commons.asu.edu'>http://commons.asu.edu</a>.
     </div>
-	<div class='entry'>
-	Development is currently focused on converting the 
-	<a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a> 
-	into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
-	</div>
-	<div class='entry'>
-	<p>For up-to-date development news, please visit <a class='external' href='http://commons.asu.edu/news''>http://commons.asu.edu/news</a>.</p>   
-	</div>
+    <br/>
+    <h2 class='title'>Current development</h2>
+    <div class='alert alertIcon'>
+        This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website will
+            not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
+    </div>
+    <div class='entry'>
+        Development is currently focused on converting the
+        <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
+        into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
+    </div>
+    <br/>
+    <p>
+        For up-to-date development news, please visit <a class='external' href='http://commons.asu.edu/news'>http://commons.asu.edu/news</a>. 
+    </p>
+</div>
 </div>
 {% endblock page %}
 
