--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -1,8 +1,30 @@
 {% extends "base-experimenter.html" %}
 
+{% block head %}
+{{ block.super }}
+<script type='text/javascript' src='/static/js/jquery.confirm.min.js'></script>
+<script type='text/javascript'>
+    $(function() {
+        $('.confirm-experiment-action').confirm({
+                timeout: 3000,
+                dialogShow: 'fadeIn',
+                dialogSpeed: 'fast',
+                buttons: {
+                    wrapper: '<button></button>',
+                    separator: ' '
+                },
+                msg: 'You are about to modify the experiment. Continue?'
+        });
+    });
+</script>
+
+
+{% endblock %}
+
 {% block title %} VCWEB Experiment Monitoring {% endblock %}
 
 {% block page %}
+{{block.super}}
 
 <fieldset>
     <legend>{{experiment}} (id: {{ experiment.pk }})</legend>
@@ -11,19 +33,25 @@
         FIXME: Improve this so that we can just inject a new round_configuration
         JSON object in and everything auto-updates.
         {% endcomment %}
-        
         <fieldset class='small'>
             <legend>Round Status</legend>
             <div class='status'>
                 Round status: <span id='experiment-status'>{{ experiment.status }}</span> 
-                {% if not experiment.is_active %}
-                <a href='activate'>(activate)</a>
-                {% endif %}
+                <div>
+                    {% if not experiment.is_active %}
+                    <a class='confirm-experiment-action' href='activate'>activate</a>
+                    {% endif %}
+                </div>
             </div>
             <div>
                 Round <span id='experiment-round'> {{ experiment.current_round.sequence_number }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b>
-                (<a href='next-round'>next round</a>
-                | <a href='stop-round'>stop round</a>)
+                <div>
+                    <a class='confirm-experiment-action' href='advance-to-next-round'>next round</a>
+                </div>
+                <div>
+                    <a class='confirm-experiment-action' href='stop-round'>stop round</a>
+                </div>
+
             </div>
             <div>
                 Round type: <span id='round-type'>{{ experiment.current_round.round_type }}</span>
