--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -1,21 +1,23 @@
 {% extends "base-vcweb.html" %}
 
-{% block title %} Virtual Commons Web Experimenter Interface {% endblock %} 
+{% block title %} 
+    Virtual Commons Web Experimenter Interface 
+{% endblock %} 
 
 {% block header %}
-{% include "includes/experimenter-nav-menu.inc" %}
+    {% include "includes/experimenter-nav-menu.inc" %}
 {% endblock %}
 
 {% block page %}
-{% if messages %}
-<div class='alert alertIcon'>
-    We encountered some problems with your request:
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-</div>
-{% endif %}
+    {% if messages %}
+        <div class='alert alertIcon'>
+            We encountered some problems with your request:
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
 {% endblock page %}
 
