practice template now extends participate template, revisit if this causes problems.. maybe an include would be more suitable.  Adding basic validation logic to the harvest decision form to limit between 0 and the max harvest decision based on the resource level

--- a/vcweb/core/templates/base-participant.html
+++ b/vcweb/core/templates/base-participant.html
@@ -1,8 +1,16 @@
 {% extends "base-vcweb.html" %}
 
-{% block title %}Virtual Commons Web Participant Interface{% endblock %}
+{% block head %}
+    {{block.super}}
+    <script type='text/javascript' src='/static/js/jquery.validate.min.js'></script>
+{% endblock %}
+
+{% block title %}
+    Virtual Commons Web Participant Interface
+{% endblock %}
+
 {% block header %}
-{% include "includes/participant-nav-menu.inc" %}
+    {% include "includes/participant-nav-menu.inc" %}
 {% endblock %}
 
 
