--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -1,26 +1,45 @@
 {% extends "base-participant.html" %}
-
-{% block title %} Forestry Participant Interface {% endblock %}
+{% block head %}
+{{ block.super }}
+<script type="text/javascript">
+$(function() {
+        $('#forestryForm').validate({ 
+                rules: {
+                    harvestDecisionId: {
+                        required: true,
+                        range: [0, {{ max_harvest_decision }}]
+                    }
+                },
+                messages: {
+                    harvestDecisionId: {
+                        required: "Please enter a harvest decision",
+                        range: "Please enter a harvest decision between ",
+                    }
+                }
+            });
+        });
+</script>
+{% endblock %}
+{% block title %}
+Participating in {{ experiment }}
+{% endblock %}
 
 {% block content %}
 <h3>Forestry round number {{ experiment.current_round.round_number }}</h3>
 <div class='forestry-resource'>
-<img src='/static/images/forestry/pine-tree.jpg'>
+    <img src='/static/images/forestry/pine-tree.jpg' alt='tree' />
 </div>
 <p>
-The resource size is <b>{{ resource_size }}</b>.
+The resource size is <b>{{ resource_level.value }}</b>.
 </p>
-<form action='submit-resource-decision' method='post'>
+<form id='forestryForm' action='submit-harvest-decision' method='post'>
 
-<div class='input'>
-<label for='resource.decision.id'>Enter a number between 0 and 5:</label>
-<input id='resource.decision.id' type="text" name='resource.decision'>
-</div>
-<div class='input'>
-<input type='submit' value='Submit'>
-</div>
-<div>
-
-</div>
+    <div class='input'>
+        <label for='harvestDecisionId'>Enter a number between <b>0 and {{ max_harvest_decision }}</b>:</label>
+        <input id='harvestDecisionId' type="text" name='harvestDecision' class='required digits' />
+    </div>
+    <div class='input'>
+        <input type='submit' value='Submit' />
+    </div>
 </form>
 {% endblock content %}
