--- a/vcweb/forestry/templates/forestry/practice.html
+++ b/vcweb/forestry/templates/forestry/practice.html
@@ -1,10 +1,10 @@
-{% extends "base-participant.html" %}
+{% extends "forestry/participate.html" %}
 
 {% block title %} Forestry Practice Round{% endblock %}
 
-{% block content %}
-<h3>Forestry Practice Round</h3>
-<p>
-This is a <b>practice round</b>.  Your decisions in this round will not affect your total earnings.
-</p>
-{% endblock content %}
+{% block page %}
+<div class='info infoIcon'>
+    This is a <b>practice round</b>.  Your decisions in this round will not affect your total earnings.
+</div>
+{{block.super}}
+{% endblock page %}
